// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches the stored value specified by the \`databaseMap\` when a database provided by context finishes opening 1`] = `
<div>
  <div>
    test content
  </div>
  <input
    data-testid="input"
    disabled={false}
    onChange={[Function]}
    value="testStore/0"
  />
</div>
`;

exports[`is disabled while fetching the stored value from the database 1`] = `
<div>
  Is disabled
</div>
`;

exports[`is disabled while the database is opening 1`] = `
<div>
  Is disabled
</div>
`;

exports[`renders correctly with a database context 1`] = `
<div>
  <div>
    test content
  </div>
  <input
    data-testid="input"
    disabled={true}
    onChange={[Function]}
  />
</div>
`;

exports[`renders correctly with all non-context props 1`] = `
<div>
  <div>
    test content
  </div>
  <input
    data-testid="input"
    disabled={true}
    onChange={[Function]}
  />
</div>
`;

exports[`renders correctly without a default value for the component 1`] = `
<div>
  <div>
    test content
  </div>
  <input
    data-testid="input"
    disabled={true}
    onChange={[Function]}
  />
</div>
`;

exports[`uses the default value when fetching the stored value returns \`undefined\` 1`] = `
<div>
  <div>
    test content
  </div>
  <input
    data-testid="input"
    disabled={false}
    onChange={[Function]}
    value="test default"
  />
</div>
`;
